# kernel

./: .clang-format  .config  .gitignore  CMakeLists.txt  Makefile  README.md  bochsrc.bxrc  boot.s  debug.sh  hd_oldlinux.img  head.s
Documentation/gpu/rfc/: i915_small_bar.h
arch/x86/: Makefile
arch/x86/boot/: a20.c  bioscall.S  bitops.h  boot.h  cmdline.c  cpu.c  cpucheck.c  cpuflags.c  cpuflags.h  ctype.h  early_serial_console.c  edd.c  header.S  io.h  main.c  memory.c  mkcpustr.c  msr.h  pm.c  printf.c  regs.c  string.c  string.h  tty.c  version.c  vesa.h  video-bios.c  video-mode.c  video-vesa.c  video-vga.c  video.c  video.h
arch/x86/entry/: common.c
arch/x86/kernel/: e820.c  ebda.c  head64.c  idt.c  paravirt.c  setup.c  time.c  tsc.c  x86_init.c
arch/x86/mm/: init.c  ioremap.c  kasan_init_64.c  tlb.c
arch/x86/pci/: early.c
book/: Makefile
book/source/: conf.py  index.rst
book/source/000-concepts/: index.rst
book/source/001-glibc/: 0000-project.md  0001-syscall.md  index.rst
book/source/001-libc/: 001-导言.md  002-error.md  003-Virtual-Memory-Allocation-And-Paging.md  index.rst
book/source/001-ling-sheng/: 001-Linux代码层次.md  007-多核调度分析.md  011-内存映射原理.md  index.rst
book/source/002-ling-sheng/: 002-Linux进程概念.md  003-调度器及CFS调度器.md  004-实时调度器及SMP和NUMA.md  005-RCU机制和内存优化屏障.md  006-内核内存布局和堆管理.md  008-内核数据结构.md  009-进程管理常用API.md  010-虚拟地址空间布局架构.md  index.rst
book/source/003-Linux内核完全注释V3.0/: 0001-微机原理-计算机组成结构.md  index.rst
book/source/1000-obs/: 0001-obs-編譯安裝.md  index.rst
book/source/1000-wayland/: 000-wayland介绍.md  001-wayland架构.md  001-合成器类型.md  002-wayland架构.md  002-wayland渲染.md  003-wayland协议和运行模式.md  003-wayland硬件支持.md  004-x11程序支持.md  005-wayland协议规范.md  006-Wayland客户端api.md  007-Wayland服务端api.md  008-Wayland硬件部分.md  009-Wayland软件包.md  010-Wayland调试.md  011-定义Wayland协议.md  index.rst
book/source/600-ioctl/: 0000-ioctl-函数介绍.md  0001-loop-ioctl.md  index.rst
book/source/601-eBPF/: 0000-概念.md  0001-程序类型.md  0002-Map类型.md  0003-Helper函数.md  0004-KFuncs.md  0005-lib-libbpf.md  index.rst
book/source/602-ptrace/: 0000-ptrace.md  index.rst
book/source/603-link_map/: 0000-概念.md  index.rst
book/source/604-capstone/: 0000-概述.md  0001-architecture.md  0002-struct.md  index.rst
book/source/700-fuse/: index.rst  libfuse-21.md  libfuse-25.md  libfuse-30.md
book/source/710-dpdk/: 0000-DPDK简介.md  0001-环境配置.md  0002-DPDK涉及到的内核模块简介.md  0003-DPDK架构概述.md  0004-环境适配层EAL.md  index.rst
book/source/800-Filesystem/: index.rst
book/source/801-Memory-Management/: 0000-相关概念.md  0001-physical-memory.md  1000-内存寻址.md  6000-slab.md  index.rst
book/source/900-assembly/: index.rst
book/source/994-headers/: 000-d.md  000-f.md  000-k.md  000-m.md  000-n.md  000-s.md  index.rst
book/source/995-modules/: index.rst
book/source/996-about-ld/: index.rst  invocation.md  ld.md  linker-scripts.md
book/source/996-about-makefile/: index.rst
book/source/997-about-others/: index.rst  memory-layout.md  proc-kallsyms.md  proc-maps.md  vm-memory-layout.md
book/source/998-about-hw/: CPU-GDT.md  CPU-IDT.md  CPU-big-little-end.md  CPU-memory-page.md  Intel-CPU-Features.md  index.rst
book/source/999-linux-kernel-read/: 0001-知识点.md  index.rst
book/source/999-linux-version/: Linux-0.0.0.md  Linux-0.0.1.md  Linux-6.12.0.md  index.rst
book/source/999-lwn/: 2000-character_encoding-The_kernel_and_character_set_encodings.md  2001-character_encoding-Working_with_UTF-8_in_the_kernel.md  8888-kernel_hardening-sanitizing_kernel_memory.md  8889-kernel_hardening-page_sanitization_part_2.md  8890-kernel_hardening-kernel_address_randomization.md  8891-kernel_hardening-the_kernel_hardening_roundtable.md  8892-kernel_hardening-post_init_read_only_memory.md  8893-kernel_hardening-Two_PaX_features_move_toward_the_mainline.md  8894-kernel_hardening-Hardened_usercopy.md  8900-vDSO-On_vsyscalls_and_the_vDSO.md  8901-vDSO-Implementing_virtual_system_calls.md  9000-library_mode-Running_the_kernel_in_library_mode.md  index.rst
book/source/9999/: 0000-四大虚拟化架构对比.md  0001-netfilter介绍.md  index.rst
boot/: boot.s  head.s
cmake/: arch.cmake  block.cmake  crypto.cmake  drivers.cmake  fs.cmake  lib.cmake  mm.cmake  scripts.cmake
drivers/acpi/numa/: srat.c
drivers/firmware/efi/: memmap.c
fs/: bitmap.c  block_dev.c  buffer.c  char_dev.c  dcache.c  exec.c  fcntl.c  file_dev.c  file_table.c  inode.c  internal.h  ioctl.c  mount.h  namei.c  namespace.c  open.c  pipe.c  read_write.c  stat.c  super.c  sys_getdents.c  truncate.c  tty_ioctl.c
fs/ext2/: ext2.h
include/: const.h  ctype.h  dirent.h  elf.h  fcntl.h  signal.h  stdarg.h  stdint.h  string.h  termios.h  unistd.h  utime.h
include/asm/: memory.h  segment.h  system.h
include/asm-generic/: early_ioremap.h  fixmap.h  qrwlock.h  qspinlock_types.h
include/bits/: wchar.h  wordsize.h
include/linux/: align.h  cgroup.h  compiler.h  compiler_types.h  cpumask.h  efi.h  entry-common.h  fs.h  fs_context.h  hdreg.h  head.h  init.h  ioport.h  irqflags.h  iscsi_ibft.h  jump_label.h  kdev_t.h  kernel.h  maple_tree.h  memblock.h  mm.h  mm_types.h  mmap_lock.h  module.h  mount.h  mutex.h  mutex_types.h  overflow.h  percpu-defs.h  percpu-rwsem.h  percpu_counter.h  preempt.h  ptdump.h  pti.h  ptp_classify.h  ptp_clock_kernel.h  ptp_kvm.h  ptp_mock.h  ptr_ring.h  ptrace.h  (+64 more)
include/linux/sched/: prio.h  task_stack.h
include/sys/: stat.h  times.h  types.h  utsname.h  wait.h
include/uapi/linux/: const.h  (+2 more)
init/: calibrate.c  do_mounts.c  init_task.c  main.c
kernel/: asm.s  console.c  cpu.c  exit.c  fork.c  hd.c  keyboard.s  mktime.c  panic.c  params.c  pid.c  printk.c  rs_io.s  sched.c  serial.c  signal.c  static_call_inline.c  sys.c  system_call.s  traps.c  tty_io.c  vsprintf.c
kernel/cgroup/: cgroup.c
kernel/locking/: mutex.c  semaphore.c
kernel/printk/: printk.c
kernel/rcu/: rcu.h  rcu_segcblist.c  rcu_segcblist.h
kernel/sched/: clock.c  fair.c  sched.h
lib/: _exit.c  buildid.c  ctype.c  open.c  wait.c
mm/: early_ioremap.c  init-mm.c  memblock.c  memory.c  mm_init.c  page.s  shmem.c
scripts/: Kbuild.include
tools/: build.c
(+99 files in other folders)
