cmake_minimum_required(VERSION 3.11)
project(kernel LANGUAGES C)

set(SYSROOT sysroot)
SET(CMAKE_C_COMPILER "gcc")
#set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -nostdinc")

include_directories(${CMAKE_SOURCE_DIR}/include)
include_directories(${CMAKE_SOURCE_DIR}/include/uapi)
include_directories(${CMAKE_SOURCE_DIR}/scripts/include)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/um/asm)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/include)
include_directories(${CMAKE_SOURCE_DIR}/include/generated)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/include/uapi)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/include/generated)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/include/asm/trace)
include_directories(${CMAKE_SOURCE_DIR}/arch/x86/include/generated/uapi)

add_definitions(
        -std=gnu11
        -fshort-wchar
        -funsigned-char
        -fno-delete-null-pointer-checks
        -fno-common
        -fno-strict-aliasing
        -fprofile-arcs
        -ftest-coverage
        -fno-tree-loop-im
        -Wno-error=missing-prototypes
        -Wno-error=implicit-function-declaration
)

include(cmake/fs.cmake)
include(cmake/mm.cmake)
include(cmake/lib.cmake)
include(cmake/arch.cmake)
include(cmake/block.cmake)
include(cmake/crypto.cmake)
include(cmake/drivers.cmake)
include(cmake/scripts.cmake)

add_executable(build arch/x86/boot/tools/build.c)
set_source_files_properties(${CMAKE_SOURCE_DIR}/arch/x86/boot/tools/build.c PROPERTIES COMPILE_FLAGS "-c -Wp,-MMD,${CMAKE_SOURCE_DIR}/arch/x86/boot/tools/.build.d -Wall -Wmissing-prototypes -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu11 -I../tools/include -include ../include/generated/autoconf.h -D__EXPORTED_HEADERS__")
target_compile_options(build PRIVATE -fprofile-arcs -ftest-coverage)
target_link_libraries(build PRIVATE gcov)

add_executable(mkcpustr arch/x86/boot/mkcpustr.c)
set_source_files_properties(${CMAKE_SOURCE_DIR}/arch/x86/boot/mkcpustr.c PROPERTIES COMPILE_FLAGS "-c -Wp,-MMD,${CMAKE_SOURCE_DIR}/arch/x86/boot/.mkcpustr.d -Wall -Wmissing-prototypes -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu11 -I../tools/include -include ../include/generated/autoconf.h -D__EXPORTED_HEADERS__")
target_compile_options(mkcpustr PRIVATE -fprofile-arcs -ftest-coverage)
target_link_libraries(mkcpustr PRIVATE gcov)

add_executable(vdso2c arch/x86/entry/vdso/vdso2c.c)
set_source_files_properties(${CMAKE_SOURCE_DIR}/arch/x86/entry/vdso/vdso2c.c PROPERTIES COMPILE_FLAGS "-c -Wp,-MMD,${CMAKE_SOURCE_DIR}/arch/x86/entry/vdso/.vdso2c.d -Wall -Wmissing-prototypes -Wstrict-prototypes -O2 -fomit-frame-pointer -std=gnu11 -include ../include/generated/autoconf.h -I../tools/include -I../include/uapi -I../arch/include/uapi")

add_executable(mkpiggy ${CMAKE_SOURCE_DIR}/arch/x86/boot/compressed/mkpiggy.c)

add_library(kernel OBJECT ${ARCH_SRC} ${BLOCK_SRC} ${CRYPTO_SRC} ${DRIVERS_SRC} ${FS_SRC} ${LIB_SRC} ${MM_SRC} ${SCRIPTS_SRC}
        ${CMAKE_SOURCE_DIR}/include/linux/kconfig.h
        ${CMAKE_SOURCE_DIR}/include/linux/compiler-version.h

        #    /data/code/kernel/.tmp_vmlinux0.kallsyms.S
        #    /data/code/kernel/.tmp_vmlinux1.kallsyms.S
        #    /data/code/kernel/.tmp_vmlinux2.kallsyms.S
        #    /data/code/kernel/.vmlinux.export.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/pkcs7.asn1.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/pkcs7_parser.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/pkcs7_trust.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/pkcs7_verify.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/x509.asn1.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/asymmetric_keys/x509_akid.asn1.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/rsaprivkey.asn1.c
        #   ${CMAKE_SOURCE_DIR}l/crypto/rsapubkey.asn1.c
        #   ${CMAKE_SOURCE_DIR}l/drivers/tty/vt/consolemap_deftbl.c
        #   ${CMAKE_SOURCE_DIR}l/drivers/tty/vt/defkeymap.c
        #   ${CMAKE_SOURCE_DIR}l/net/wireless/shipped-certs.c

        ${CMAKE_SOURCE_DIR}/certs/extract-cert.c
        ${CMAKE_SOURCE_DIR}/certs/system_certificates.S
        ${CMAKE_SOURCE_DIR}/certs/system_keyring.c

        ${CMAKE_SOURCE_DIR}/init/calibrate.c
        ${CMAKE_SOURCE_DIR}/init/do_mounts.c
        ${CMAKE_SOURCE_DIR}/init/do_mounts_initrd.c
        ${CMAKE_SOURCE_DIR}/init/init_task.c
        ${CMAKE_SOURCE_DIR}/init/initramfs.c
        ${CMAKE_SOURCE_DIR}/init/main.c
        ${CMAKE_SOURCE_DIR}/init/version-timestamp.c
        ${CMAKE_SOURCE_DIR}/init/version.c
        ${CMAKE_SOURCE_DIR}/io_uring/advise.c
        ${CMAKE_SOURCE_DIR}/io_uring/cancel.c
        ${CMAKE_SOURCE_DIR}/io_uring/epoll.c
        ${CMAKE_SOURCE_DIR}/io_uring/eventfd.c
        ${CMAKE_SOURCE_DIR}/io_uring/fdinfo.c
        ${CMAKE_SOURCE_DIR}/io_uring/filetable.c
        ${CMAKE_SOURCE_DIR}/io_uring/fs.c
        ${CMAKE_SOURCE_DIR}/io_uring/futex.c
        ${CMAKE_SOURCE_DIR}/io_uring/io-wq.c
        ${CMAKE_SOURCE_DIR}/io_uring/io_uring.c
        ${CMAKE_SOURCE_DIR}/io_uring/kbuf.c
        ${CMAKE_SOURCE_DIR}/io_uring/memmap.c
        ${CMAKE_SOURCE_DIR}/io_uring/msg_ring.c
        ${CMAKE_SOURCE_DIR}/io_uring/napi.c
        ${CMAKE_SOURCE_DIR}/io_uring/net.c
        ${CMAKE_SOURCE_DIR}/io_uring/nop.c
        ${CMAKE_SOURCE_DIR}/io_uring/notif.c
        ${CMAKE_SOURCE_DIR}/io_uring/opdef.c
        ${CMAKE_SOURCE_DIR}/io_uring/openclose.c
        ${CMAKE_SOURCE_DIR}/io_uring/poll.c
        ${CMAKE_SOURCE_DIR}/io_uring/register.c
        ${CMAKE_SOURCE_DIR}/io_uring/rsrc.c
        ${CMAKE_SOURCE_DIR}/io_uring/rw.c
        ${CMAKE_SOURCE_DIR}/io_uring/splice.c
        ${CMAKE_SOURCE_DIR}/io_uring/sqpoll.c
        ${CMAKE_SOURCE_DIR}/io_uring/statx.c
        ${CMAKE_SOURCE_DIR}/io_uring/sync.c
        ${CMAKE_SOURCE_DIR}/io_uring/tctx.c
        ${CMAKE_SOURCE_DIR}/io_uring/timeout.c
        ${CMAKE_SOURCE_DIR}/io_uring/truncate.c
        ${CMAKE_SOURCE_DIR}/io_uring/uring_cmd.c
        ${CMAKE_SOURCE_DIR}/io_uring/waitid.c
        ${CMAKE_SOURCE_DIR}/io_uring/xattr.c
        ${CMAKE_SOURCE_DIR}/ipc/compat.c
        ${CMAKE_SOURCE_DIR}/ipc/ipc_sysctl.c
        ${CMAKE_SOURCE_DIR}/ipc/mq_sysctl.c
        ${CMAKE_SOURCE_DIR}/ipc/mqueue.c
        ${CMAKE_SOURCE_DIR}/ipc/msg.c
        ${CMAKE_SOURCE_DIR}/ipc/msgutil.c
        ${CMAKE_SOURCE_DIR}/ipc/namespace.c
        ${CMAKE_SOURCE_DIR}/ipc/sem.c
        ${CMAKE_SOURCE_DIR}/ipc/shm.c
        ${CMAKE_SOURCE_DIR}/ipc/syscall.c
        ${CMAKE_SOURCE_DIR}/ipc/util.c
        ${CMAKE_SOURCE_DIR}/kernel/acct.c
        ${CMAKE_SOURCE_DIR}/kernel/async.c
        ${CMAKE_SOURCE_DIR}/kernel/audit.c
        ${CMAKE_SOURCE_DIR}/kernel/audit_fsnotify.c
        ${CMAKE_SOURCE_DIR}/kernel/audit_tree.c
        ${CMAKE_SOURCE_DIR}/kernel/audit_watch.c
        ${CMAKE_SOURCE_DIR}/kernel/auditfilter.c
        ${CMAKE_SOURCE_DIR}/kernel/auditsc.c
        ${CMAKE_SOURCE_DIR}/kernel/bounds.c
        ${CMAKE_SOURCE_DIR}/kernel/bpf/core.c
        ${CMAKE_SOURCE_DIR}/kernel/capability.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/cgroup-v1.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/cgroup.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/cpuset.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/debug.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/freezer.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/legacy_freezer.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/misc.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/namespace.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/pids.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/rdma.c
        ${CMAKE_SOURCE_DIR}/kernel/cgroup/rstat.c
        ${CMAKE_SOURCE_DIR}/kernel/compat.c
        ${CMAKE_SOURCE_DIR}/kernel/context_tracking.c
        ${CMAKE_SOURCE_DIR}/kernel/cpu.c
        ${CMAKE_SOURCE_DIR}/kernel/crash_core.c
        ${CMAKE_SOURCE_DIR}/kernel/crash_reserve.c
        ${CMAKE_SOURCE_DIR}/kernel/cred.c
        ${CMAKE_SOURCE_DIR}/kernel/delayacct.c
        ${CMAKE_SOURCE_DIR}/kernel/dma.c
        ${CMAKE_SOURCE_DIR}/kernel/dma/direct.c
        ${CMAKE_SOURCE_DIR}/kernel/dma/mapping.c
        ${CMAKE_SOURCE_DIR}/kernel/dma/ops_helpers.c
        ${CMAKE_SOURCE_DIR}/kernel/dma/remap.c
        ${CMAKE_SOURCE_DIR}/kernel/dma/swiotlb.c
        ${CMAKE_SOURCE_DIR}/kernel/elfcorehdr.c
        ${CMAKE_SOURCE_DIR}/kernel/entry/common.c
        ${CMAKE_SOURCE_DIR}/kernel/entry/syscall_user_dispatch.c
        ${CMAKE_SOURCE_DIR}/kernel/events/callchain.c
        ${CMAKE_SOURCE_DIR}/kernel/events/core.c
        ${CMAKE_SOURCE_DIR}/kernel/events/hw_breakpoint.c
        ${CMAKE_SOURCE_DIR}/kernel/events/ring_buffer.c
        ${CMAKE_SOURCE_DIR}/kernel/events/uprobes.c
        ${CMAKE_SOURCE_DIR}/kernel/exec_domain.c
        ${CMAKE_SOURCE_DIR}/kernel/exit.c
        ${CMAKE_SOURCE_DIR}/kernel/extable.c
        ${CMAKE_SOURCE_DIR}/kernel/fork.c
        ${CMAKE_SOURCE_DIR}/kernel/freezer.c
        ${CMAKE_SOURCE_DIR}/kernel/futex/core.c
        ${CMAKE_SOURCE_DIR}/kernel/futex/pi.c
        ${CMAKE_SOURCE_DIR}/kernel/futex/requeue.c
        ${CMAKE_SOURCE_DIR}/kernel/futex/syscalls.c
        ${CMAKE_SOURCE_DIR}/kernel/futex/waitwake.c
        ${CMAKE_SOURCE_DIR}/kernel/groups.c
        ${CMAKE_SOURCE_DIR}/kernel/iomem.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/affinity.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/autoprobe.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/chip.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/cpuhotplug.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/devres.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/dummychip.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/handle.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/irqdesc.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/irqdomain.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/manage.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/matrix.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/migration.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/msi.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/pm.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/proc.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/resend.c
        ${CMAKE_SOURCE_DIR}/kernel/irq/spurious.c
        ${CMAKE_SOURCE_DIR}/kernel/irq_work.c
        ${CMAKE_SOURCE_DIR}/kernel/jump_label.c
        ${CMAKE_SOURCE_DIR}/kernel/kallsyms.c
        ${CMAKE_SOURCE_DIR}/kernel/kcmp.c
        ${CMAKE_SOURCE_DIR}/kernel/kexec.c
        ${CMAKE_SOURCE_DIR}/kernel/kexec_core.c
        ${CMAKE_SOURCE_DIR}/kernel/kprobes.c
        ${CMAKE_SOURCE_DIR}/kernel/ksyms_common.c
        ${CMAKE_SOURCE_DIR}/kernel/ksysfs.c
        ${CMAKE_SOURCE_DIR}/kernel/kthread.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/mutex.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/osq_lock.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/percpu-rwsem.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/qrwlock.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/qspinlock.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/rtmutex_api.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/rwsem.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/semaphore.c
        ${CMAKE_SOURCE_DIR}/kernel/locking/spinlock.c
        ${CMAKE_SOURCE_DIR}/kernel/module/kallsyms.c
        ${CMAKE_SOURCE_DIR}/kernel/module/kmod.c
        ${CMAKE_SOURCE_DIR}/kernel/module/main.c
        ${CMAKE_SOURCE_DIR}/kernel/module/procfs.c
        ${CMAKE_SOURCE_DIR}/kernel/module/strict_rwx.c
        ${CMAKE_SOURCE_DIR}/kernel/module/sysfs.c
        ${CMAKE_SOURCE_DIR}/kernel/module/tree_lookup.c
        ${CMAKE_SOURCE_DIR}/kernel/notifier.c
        ${CMAKE_SOURCE_DIR}/kernel/nsproxy.c
        ${CMAKE_SOURCE_DIR}/kernel/padata.c
        ${CMAKE_SOURCE_DIR}/kernel/panic.c
        ${CMAKE_SOURCE_DIR}/kernel/params.c
        ${CMAKE_SOURCE_DIR}/kernel/pid.c
        ${CMAKE_SOURCE_DIR}/kernel/pid_namespace.c
        ${CMAKE_SOURCE_DIR}/kernel/power/console.c
        ${CMAKE_SOURCE_DIR}/kernel/power/hibernate.c
        ${CMAKE_SOURCE_DIR}/kernel/power/main.c
        ${CMAKE_SOURCE_DIR}/kernel/power/poweroff.c
        ${CMAKE_SOURCE_DIR}/kernel/power/process.c
        ${CMAKE_SOURCE_DIR}/kernel/power/qos.c
        ${CMAKE_SOURCE_DIR}/kernel/power/snapshot.c
        ${CMAKE_SOURCE_DIR}/kernel/power/suspend.c
        ${CMAKE_SOURCE_DIR}/kernel/power/swap.c
        ${CMAKE_SOURCE_DIR}/kernel/power/user.c
        ${CMAKE_SOURCE_DIR}/kernel/printk/nbcon.c
        ${CMAKE_SOURCE_DIR}/kernel/printk/printk.c
        ${CMAKE_SOURCE_DIR}/kernel/printk/printk_ringbuffer.c
        ${CMAKE_SOURCE_DIR}/kernel/printk/printk_safe.c
        ${CMAKE_SOURCE_DIR}/kernel/printk/sysctl.c
        ${CMAKE_SOURCE_DIR}/kernel/profile.c
        ${CMAKE_SOURCE_DIR}/kernel/ptrace.c
        ${CMAKE_SOURCE_DIR}/kernel/range.c
        ${CMAKE_SOURCE_DIR}/kernel/rcu/rcu_segcblist.c
        ${CMAKE_SOURCE_DIR}/kernel/rcu/srcutree.c
        ${CMAKE_SOURCE_DIR}/kernel/rcu/sync.c
        ${CMAKE_SOURCE_DIR}/kernel/rcu/tree.c
        ${CMAKE_SOURCE_DIR}/kernel/rcu/update.c
        ${CMAKE_SOURCE_DIR}/kernel/reboot.c
        ${CMAKE_SOURCE_DIR}/kernel/regset.c
        ${CMAKE_SOURCE_DIR}/kernel/relay.c
        ${CMAKE_SOURCE_DIR}/kernel/resource.c
        ${CMAKE_SOURCE_DIR}/kernel/rseq.c
        ${CMAKE_SOURCE_DIR}/kernel/sched/build_policy.c
        ${CMAKE_SOURCE_DIR}/kernel/sched/build_utility.c
        ${CMAKE_SOURCE_DIR}/kernel/sched/core.c
        ${CMAKE_SOURCE_DIR}/kernel/sched/fair.c
        ${CMAKE_SOURCE_DIR}/kernel/seccomp.c
        ${CMAKE_SOURCE_DIR}/kernel/signal.c
        ${CMAKE_SOURCE_DIR}/kernel/smp.c
        ${CMAKE_SOURCE_DIR}/kernel/smpboot.c
        ${CMAKE_SOURCE_DIR}/kernel/softirq.c
        ${CMAKE_SOURCE_DIR}/kernel/stacktrace.c
        ${CMAKE_SOURCE_DIR}/kernel/static_call.c
        ${CMAKE_SOURCE_DIR}/kernel/static_call_inline.c
        ${CMAKE_SOURCE_DIR}/kernel/stop_machine.c
        ${CMAKE_SOURCE_DIR}/kernel/sys.c
        ${CMAKE_SOURCE_DIR}/kernel/sys_ni.c
        ${CMAKE_SOURCE_DIR}/kernel/sysctl.c
        ${CMAKE_SOURCE_DIR}/kernel/task_work.c
        ${CMAKE_SOURCE_DIR}/kernel/taskstats.c
        ${CMAKE_SOURCE_DIR}/kernel/time/alarmtimer.c
        ${CMAKE_SOURCE_DIR}/kernel/time/clockevents.c
        ${CMAKE_SOURCE_DIR}/kernel/time/clocksource.c
        ${CMAKE_SOURCE_DIR}/kernel/time/hrtimer.c
        ${CMAKE_SOURCE_DIR}/kernel/time/itimer.c
        ${CMAKE_SOURCE_DIR}/kernel/time/jiffies.c
        ${CMAKE_SOURCE_DIR}/kernel/time/namespace.c
        ${CMAKE_SOURCE_DIR}/kernel/time/ntp.c
        ${CMAKE_SOURCE_DIR}/kernel/time/posix-clock.c
        ${CMAKE_SOURCE_DIR}/kernel/time/posix-cpu-timers.c
        ${CMAKE_SOURCE_DIR}/kernel/time/posix-timers.c
        ${CMAKE_SOURCE_DIR}/kernel/time/tick-broadcast-hrtimer.c
        ${CMAKE_SOURCE_DIR}/kernel/time/tick-broadcast.c
        ${CMAKE_SOURCE_DIR}/kernel/time/tick-common.c
        ${CMAKE_SOURCE_DIR}/kernel/time/tick-oneshot.c
        ${CMAKE_SOURCE_DIR}/kernel/time/tick-sched.c
        ${CMAKE_SOURCE_DIR}/kernel/time/time.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timeconv.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timecounter.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timekeeping.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timekeeping_debug.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timer.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timer_list.c
        ${CMAKE_SOURCE_DIR}/kernel/time/timer_migration.c
        ${CMAKE_SOURCE_DIR}/kernel/time/vsyscall.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/blktrace.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/error_report-traces.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/pid_list.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/power-traces.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/rethook.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/ring_buffer.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/rpm-traces.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_clock.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_dynevent.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_eprobe.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_event_perf.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_events.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_events_filter.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_events_trigger.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_export.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_kprobe.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_nop.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_output.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_printk.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_probe.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_sched_switch.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_seq.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_stat.c
        ${CMAKE_SOURCE_DIR}/kernel/trace/trace_uprobe.c
        ${CMAKE_SOURCE_DIR}/kernel/tracepoint.c
        ${CMAKE_SOURCE_DIR}/kernel/tsacct.c
        ${CMAKE_SOURCE_DIR}/kernel/ucount.c
        ${CMAKE_SOURCE_DIR}/kernel/uid16.c
        ${CMAKE_SOURCE_DIR}/kernel/umh.c
        ${CMAKE_SOURCE_DIR}/kernel/user.c
        ${CMAKE_SOURCE_DIR}/kernel/utsname.c
        ${CMAKE_SOURCE_DIR}/kernel/utsname_sysctl.c
        ${CMAKE_SOURCE_DIR}/kernel/vmcore_info.c
        ${CMAKE_SOURCE_DIR}/kernel/workqueue.c

        ${CMAKE_SOURCE_DIR}/net/9p/client.c
        ${CMAKE_SOURCE_DIR}/net/9p/error.c
        ${CMAKE_SOURCE_DIR}/net/9p/mod.c
        ${CMAKE_SOURCE_DIR}/net/9p/protocol.c
        ${CMAKE_SOURCE_DIR}/net/9p/trans_common.c
        ${CMAKE_SOURCE_DIR}/net/9p/trans_fd.c
        ${CMAKE_SOURCE_DIR}/net/9p/trans_virtio.c
        ${CMAKE_SOURCE_DIR}/net/compat.c
        ${CMAKE_SOURCE_DIR}/net/core/datagram.c
        ${CMAKE_SOURCE_DIR}/net/core/dev.c
        ${CMAKE_SOURCE_DIR}/net/core/dev_addr_lists.c
        ${CMAKE_SOURCE_DIR}/net/core/dev_ioctl.c
        ${CMAKE_SOURCE_DIR}/net/core/dst.c
        ${CMAKE_SOURCE_DIR}/net/core/dst_cache.c
        ${CMAKE_SOURCE_DIR}/net/core/failover.c
        ${CMAKE_SOURCE_DIR}/net/core/fib_notifier.c
        ${CMAKE_SOURCE_DIR}/net/core/fib_rules.c
        ${CMAKE_SOURCE_DIR}/net/core/filter.c
        ${CMAKE_SOURCE_DIR}/net/core/flow_dissector.c
        ${CMAKE_SOURCE_DIR}/net/core/flow_offload.c
        ${CMAKE_SOURCE_DIR}/net/core/gen_estimator.c
        ${CMAKE_SOURCE_DIR}/net/core/gen_stats.c
        ${CMAKE_SOURCE_DIR}/net/core/gro.c
        ${CMAKE_SOURCE_DIR}/net/core/gro_cells.c
        ${CMAKE_SOURCE_DIR}/net/core/gso.c
        ${CMAKE_SOURCE_DIR}/net/core/hotdata.c
        ${CMAKE_SOURCE_DIR}/net/core/link_watch.c
        ${CMAKE_SOURCE_DIR}/net/core/neighbour.c
        ${CMAKE_SOURCE_DIR}/net/core/net-procfs.c
        ${CMAKE_SOURCE_DIR}/net/core/net-sysfs.c
        ${CMAKE_SOURCE_DIR}/net/core/net-traces.c
        ${CMAKE_SOURCE_DIR}/net/core/net_namespace.c
        ${CMAKE_SOURCE_DIR}/net/core/netclassid_cgroup.c
        ${CMAKE_SOURCE_DIR}/net/core/netdev-genl-gen.c
        ${CMAKE_SOURCE_DIR}/net/core/netdev-genl.c
        ${CMAKE_SOURCE_DIR}/net/core/netdev_rx_queue.c
        ${CMAKE_SOURCE_DIR}/net/core/netevent.c
        ${CMAKE_SOURCE_DIR}/net/core/netpoll.c
        ${CMAKE_SOURCE_DIR}/net/core/netprio_cgroup.c
        ${CMAKE_SOURCE_DIR}/net/core/ptp_classifier.c
        ${CMAKE_SOURCE_DIR}/net/core/request_sock.c
        ${CMAKE_SOURCE_DIR}/net/core/rtnetlink.c
        ${CMAKE_SOURCE_DIR}/net/core/scm.c
        ${CMAKE_SOURCE_DIR}/net/core/secure_seq.c
        ${CMAKE_SOURCE_DIR}/net/core/selftests.c
        ${CMAKE_SOURCE_DIR}/net/core/skbuff.c
        ${CMAKE_SOURCE_DIR}/net/core/sock.c
        ${CMAKE_SOURCE_DIR}/net/core/sock_diag.c
        ${CMAKE_SOURCE_DIR}/net/core/sock_reuseport.c
        ${CMAKE_SOURCE_DIR}/net/core/stream.c
        ${CMAKE_SOURCE_DIR}/net/core/sysctl_net_core.c
        ${CMAKE_SOURCE_DIR}/net/core/tso.c
        ${CMAKE_SOURCE_DIR}/net/core/utils.c
        ${CMAKE_SOURCE_DIR}/net/core/xdp.c
        ${CMAKE_SOURCE_DIR}/net/devres.c
        ${CMAKE_SOURCE_DIR}/net/dns_resolver/dns_key.c
        ${CMAKE_SOURCE_DIR}/net/dns_resolver/dns_query.c
        ${CMAKE_SOURCE_DIR}/net/ethernet/eth.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/bitset.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/cabletest.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/channels.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/cmis_cdb.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/cmis_fw_update.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/coalesce.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/common.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/debug.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/eee.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/eeprom.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/features.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/fec.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/ioctl.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/linkinfo.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/linkmodes.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/linkstate.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/mm.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/module.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/netlink.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/pause.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/phc_vclocks.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/phy.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/plca.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/privflags.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/pse-pd.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/rings.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/rss.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/stats.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/strset.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/tsinfo.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/tunnels.c
        ${CMAKE_SOURCE_DIR}/net/ethtool/wol.c
        ${CMAKE_SOURCE_DIR}/net/handshake/alert.c
        ${CMAKE_SOURCE_DIR}/net/handshake/genl.c
        ${CMAKE_SOURCE_DIR}/net/handshake/netlink.c
        ${CMAKE_SOURCE_DIR}/net/handshake/request.c
        ${CMAKE_SOURCE_DIR}/net/handshake/tlshd.c
        ${CMAKE_SOURCE_DIR}/net/handshake/trace.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/af_inet.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/arp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/cipso_ipv4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/datagram.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/devinet.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/fib_frontend.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/fib_notifier.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/fib_rules.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/fib_semantics.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/fib_trie.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/gre_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/icmp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/igmp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/inet_connection_sock.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/inet_fragment.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/inet_hashtables.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/inet_timewait_sock.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/inetpeer.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_forward.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_fragment.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_input.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_options.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_output.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_sockglue.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_tunnel.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ip_tunnel_core.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ipconfig.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ipmr.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ipmr_base.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/metrics.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/ip_tables.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/ipt_REJECT.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/iptable_filter.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/iptable_mangle.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/nf_defrag_ipv4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netfilter/nf_reject_ipv4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/netlink.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/nexthop.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/ping.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/proc.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/protocol.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/raw.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/route.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/syncookies.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/sysctl_net_ipv4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_cong.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_cubic.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_fastopen.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_input.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_ipv4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_metrics.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_minisocks.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_output.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_plb.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_rate.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_recovery.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_sigpool.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_timer.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tcp_ulp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/tunnel4.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/udp.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/udp_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/udp_tunnel_stub.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/udplite.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/xfrm4_input.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/xfrm4_output.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/xfrm4_policy.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/xfrm4_protocol.c
        ${CMAKE_SOURCE_DIR}/net/ipv4/xfrm4_state.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/addrconf.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/addrconf_core.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/addrlabel.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/af_inet6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ah6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/anycast.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/calipso.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/datagram.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/esp6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/exthdrs.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/exthdrs_core.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/exthdrs_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/fib6_notifier.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/icmp.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/inet6_connection_sock.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/inet6_hashtables.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ioam6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_checksum.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_fib.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_flowlabel.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_icmp.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_input.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ip6_output.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ipv6_sockglue.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/mcast.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/mcast_snoop.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ndisc.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/ip6_tables.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/ip6t_REJECT.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/ip6t_ipv6header.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/ip6table_filter.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/ip6table_mangle.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/nf_conntrack_reasm.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/nf_defrag_ipv6_hooks.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/netfilter/nf_reject_ipv6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/output_core.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/ping.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/proc.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/protocol.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/raw.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/reassembly.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/route.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/rpl.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/seg6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/sit.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/syncookies.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/sysctl_net_ipv6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/tcp_ipv6.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/tcpv6_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/udp.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/udp_offload.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/udplite.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/xfrm6_input.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/xfrm6_output.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/xfrm6_policy.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/xfrm6_protocol.c
        ${CMAKE_SOURCE_DIR}/net/ipv6/xfrm6_state.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/aead_api.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/aes_cmac.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/aes_gmac.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/agg-rx.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/agg-tx.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/airtime.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/cfg.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/chan.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/driver-ops.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/eht.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/ethtool.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/fils_aead.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/he.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/ht.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/ibss.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/iface.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/key.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/led.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/link.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/main.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/michael.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/mlme.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/ocb.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/offchannel.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/parse.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/pm.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/rate.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/rc80211_minstrel_ht.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/rx.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/s1g.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/scan.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/spectmgmt.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/sta_info.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/status.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/tdls.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/tkip.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/trace.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/tx.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/util.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/vht.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/wbrf.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/wep.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/wme.c
        ${CMAKE_SOURCE_DIR}/net/mac80211/wpa.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/core.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_acct.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_core.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_expect.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_extend.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_ftp.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_helper.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_irc.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_netlink.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto_generic.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto_icmp.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto_icmpv6.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto_tcp.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_proto_udp.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_seqadj.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_sip.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_conntrack_standalone.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_log.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_core.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_ftp.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_helper.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_irc.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_masquerade.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_proto.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_nat_sip.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_queue.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nf_sockopt.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nfnetlink.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/nfnetlink_log.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/utils.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/x_tables.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_CONNSECMARK.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_NFLOG.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_SECMARK.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_TCPMSS.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_conntrack.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_policy.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_state.c
        ${CMAKE_SOURCE_DIR}/net/netfilter/xt_tcpudp.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_addrlist.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_calipso.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_cipso_v4.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_domainhash.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_kapi.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_mgmt.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_unlabeled.c
        ${CMAKE_SOURCE_DIR}/net/netlabel/netlabel_user.c
        ${CMAKE_SOURCE_DIR}/net/netlink/af_netlink.c
        ${CMAKE_SOURCE_DIR}/net/netlink/genetlink.c
        ${CMAKE_SOURCE_DIR}/net/netlink/policy.c
        ${CMAKE_SOURCE_DIR}/net/packet/af_packet.c
        ${CMAKE_SOURCE_DIR}/net/rfkill/core.c
        ${CMAKE_SOURCE_DIR}/net/rfkill/input.c
        ${CMAKE_SOURCE_DIR}/net/sched/act_api.c
        ${CMAKE_SOURCE_DIR}/net/sched/cls_api.c
        ${CMAKE_SOURCE_DIR}/net/sched/cls_cgroup.c
        ${CMAKE_SOURCE_DIR}/net/sched/ematch.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_api.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_blackhole.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_fifo.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_frag.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_generic.c
        ${CMAKE_SOURCE_DIR}/net/sched/sch_mq.c
        ${CMAKE_SOURCE_DIR}/net/socket.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/addr.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/auth_gss.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_generic_token.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_crypto.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_keys.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_mech.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_seal.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_unseal.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_krb5_wrap.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_mech_switch.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_rpc_upcall.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/gss_rpc_xdr.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/svcauth_gss.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_gss/trace.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_null.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_tls.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/auth_unix.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/cache.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/clnt.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/rpc_pipe.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/rpcb_clnt.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/sched.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/socklib.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/stats.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/sunrpc_syms.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/svc.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/svc_xprt.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/svcauth.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/svcauth_unix.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/svcsock.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/sysctl.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/sysfs.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/timer.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/xdr.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/xprt.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/xprtmultipath.c
        ${CMAKE_SOURCE_DIR}/net/sunrpc/xprtsock.c
        ${CMAKE_SOURCE_DIR}/net/sysctl_net.c
        ${CMAKE_SOURCE_DIR}/net/unix/af_unix.c
        ${CMAKE_SOURCE_DIR}/net/unix/garbage.c
        ${CMAKE_SOURCE_DIR}/net/unix/sysctl_net_unix.c
        ${CMAKE_SOURCE_DIR}/net/wireless/ap.c
        ${CMAKE_SOURCE_DIR}/net/wireless/chan.c
        ${CMAKE_SOURCE_DIR}/net/wireless/core.c
        ${CMAKE_SOURCE_DIR}/net/wireless/ethtool.c
        ${CMAKE_SOURCE_DIR}/net/wireless/ibss.c
        ${CMAKE_SOURCE_DIR}/net/wireless/mesh.c
        ${CMAKE_SOURCE_DIR}/net/wireless/mlme.c
        ${CMAKE_SOURCE_DIR}/net/wireless/nl80211.c
        ${CMAKE_SOURCE_DIR}/net/wireless/ocb.c
        ${CMAKE_SOURCE_DIR}/net/wireless/pmsr.c
        ${CMAKE_SOURCE_DIR}/net/wireless/radiotap.c
        ${CMAKE_SOURCE_DIR}/net/wireless/reg.c
        ${CMAKE_SOURCE_DIR}/net/wireless/scan.c
        ${CMAKE_SOURCE_DIR}/net/wireless/sme.c
        ${CMAKE_SOURCE_DIR}/net/wireless/sysfs.c
        ${CMAKE_SOURCE_DIR}/net/wireless/trace.c
        ${CMAKE_SOURCE_DIR}/net/wireless/util.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_algo.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_device.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_hash.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_input.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_nat_keepalive.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_output.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_policy.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_replay.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_state.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_sysctl.c
        ${CMAKE_SOURCE_DIR}/net/xfrm/xfrm_user.c
        ${CMAKE_SOURCE_DIR}/security/commoncap.c
        ${CMAKE_SOURCE_DIR}/security/device_cgroup.c
        ${CMAKE_SOURCE_DIR}/security/integrity/iint.c
        ${CMAKE_SOURCE_DIR}/security/integrity/integrity_audit.c
        ${CMAKE_SOURCE_DIR}/security/keys/compat.c
        ${CMAKE_SOURCE_DIR}/security/keys/gc.c
        ${CMAKE_SOURCE_DIR}/security/keys/key.c
        ${CMAKE_SOURCE_DIR}/security/keys/keyctl.c
        ${CMAKE_SOURCE_DIR}/security/keys/keyctl_pkey.c
        ${CMAKE_SOURCE_DIR}/security/keys/keyring.c
        ${CMAKE_SOURCE_DIR}/security/keys/permission.c
        ${CMAKE_SOURCE_DIR}/security/keys/proc.c
        ${CMAKE_SOURCE_DIR}/security/keys/process_keys.c
        ${CMAKE_SOURCE_DIR}/security/keys/request_key.c
        ${CMAKE_SOURCE_DIR}/security/keys/request_key_auth.c
        ${CMAKE_SOURCE_DIR}/security/keys/sysctl.c
        ${CMAKE_SOURCE_DIR}/security/keys/user_defined.c
        ${CMAKE_SOURCE_DIR}/security/lsm_audit.c
        ${CMAKE_SOURCE_DIR}/security/lsm_syscalls.c
        ${CMAKE_SOURCE_DIR}/security/min_addr.c
        ${CMAKE_SOURCE_DIR}/security/security.c
        ${CMAKE_SOURCE_DIR}/security/selinux/avc.c
        ${CMAKE_SOURCE_DIR}/security/selinux/hooks.c
        ${CMAKE_SOURCE_DIR}/security/selinux/netif.c
        ${CMAKE_SOURCE_DIR}/security/selinux/netlabel.c
        ${CMAKE_SOURCE_DIR}/security/selinux/netlink.c
        ${CMAKE_SOURCE_DIR}/security/selinux/netnode.c
        ${CMAKE_SOURCE_DIR}/security/selinux/netport.c
        ${CMAKE_SOURCE_DIR}/security/selinux/nlmsgtab.c
        ${CMAKE_SOURCE_DIR}/security/selinux/selinuxfs.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/avtab.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/conditional.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/context.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/ebitmap.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/hashtab.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/mls.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/policydb.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/services.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/sidtab.c
        ${CMAKE_SOURCE_DIR}/security/selinux/ss/symtab.c
        ${CMAKE_SOURCE_DIR}/security/selinux/status.c
        ${CMAKE_SOURCE_DIR}/sound/core/control.c
        ${CMAKE_SOURCE_DIR}/sound/core/ctljack.c
        ${CMAKE_SOURCE_DIR}/sound/core/device.c
        ${CMAKE_SOURCE_DIR}/sound/core/hrtimer.c
        ${CMAKE_SOURCE_DIR}/sound/core/hwdep.c
        ${CMAKE_SOURCE_DIR}/sound/core/info.c
        ${CMAKE_SOURCE_DIR}/sound/core/init.c
        ${CMAKE_SOURCE_DIR}/sound/core/isadma.c
        ${CMAKE_SOURCE_DIR}/sound/core/jack.c
        ${CMAKE_SOURCE_DIR}/sound/core/memalloc.c
        ${CMAKE_SOURCE_DIR}/sound/core/memory.c
        ${CMAKE_SOURCE_DIR}/sound/core/misc.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm_lib.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm_memory.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm_misc.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm_native.c
        ${CMAKE_SOURCE_DIR}/sound/core/pcm_timer.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_clientmgr.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_dummy.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_fifo.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_info.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_lock.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_memory.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_ports.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_prioq.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_queue.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_system.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq/seq_timer.c
        ${CMAKE_SOURCE_DIR}/sound/core/seq_device.c
        ${CMAKE_SOURCE_DIR}/sound/core/sound.c
        ${CMAKE_SOURCE_DIR}/sound/core/timer.c
        ${CMAKE_SOURCE_DIR}/sound/core/vmaster.c
        ${CMAKE_SOURCE_DIR}/sound/hda/array.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hda_bus_type.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_bus.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_component.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_controller.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_device.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_i915.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_regmap.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_stream.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdac_sysfs.c
        ${CMAKE_SOURCE_DIR}/sound/hda/hdmi_chmap.c
        ${CMAKE_SOURCE_DIR}/sound/hda/intel-dsp-config.c
        ${CMAKE_SOURCE_DIR}/sound/hda/intel-nhlt.c
        ${CMAKE_SOURCE_DIR}/sound/hda/intel-sdw-acpi.c
        ${CMAKE_SOURCE_DIR}/sound/hda/trace.c
        ${CMAKE_SOURCE_DIR}/sound/last.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_auto_parser.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_bind.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_codec.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_controller.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_hwdep.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_intel.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_jack.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_proc.c
        ${CMAKE_SOURCE_DIR}/sound/pci/hda/hda_sysfs.c
        ${CMAKE_SOURCE_DIR}/sound/sound_core.c
        ${CMAKE_SOURCE_DIR}/tools/lib/ctype.c
        ${CMAKE_SOURCE_DIR}/tools/lib/rbtree.c
        ${CMAKE_SOURCE_DIR}/tools/lib/str_error_r.c
        ${CMAKE_SOURCE_DIR}/tools/lib/string.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/exec-cmd.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/help.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/pager.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/parse-options.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/run-command.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/sigchain.c
        ${CMAKE_SOURCE_DIR}/tools/lib/subcmd/subcmd-config.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/arch/x86/decode.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/arch/x86/orc.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/arch/x86/special.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/builtin-check.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/check.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/elf.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/objtool.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/orc_dump.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/orc_gen.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/special.c
        ${CMAKE_SOURCE_DIR}/tools/objtool/weak.c
        ${CMAKE_SOURCE_DIR}/usr/gen_init_cpio.c
        ${CMAKE_SOURCE_DIR}/usr/initramfs_data.S
)
target_compile_options(kernel PUBLIC -nostdinc -fno-PIE)
target_compile_definitions(kernel PUBLIC  __KERNEL__)

include(cmake/properties.cmake)